# conforme

./: .gitattributes  .gitignore  README.md  pyproject.toml
conforme/conformal/: predictions.py  predictor.py  score.py  zones.py
conforme/data_processing/: argoverse.py  covid.py  dataset.py  eeg.py  synthetic.py  types.py
conforme/experiments/: argoverse.py  medical.py  parameters.py  run.py  synthetic.py
conforme/model/: rnn.py
conforme/predictions/: medical.py
conforme/result/: containers.py  evaluation.py  plotting.py  results_database.py  search.py
conforme/train/: medical.py  synthetic.py
data/: argoverse_lanegcn.pkl  argoverse_processing.py  covid.pkl  eeg_test.pkl  eeg_train.pkl
doc/: abstract.md  download_data.md  install.md  structure.md  usage.md
scripts/: plot_betas.py  plot_prediction_horizon.py  run_experiments.py  run_experiments_argoverse.py  run_experiments_betas.py  run_experiments_medical.py  run_experiments_synthetic.py  run_experiments_tables.py  summary_table.py
typings/prettytable/: __init__.pyi  prettytable.pyi
