[tool.poetry]
name = "conforme"
version = "0.1.0"
description = ""
authors = ["aloysiogl <aloysiogl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.2"
jupyterlab = "~3.2.1"
matplotlib = "~3.3.4"
numpy = ">=1.22"
pandas = "~1.2.1"
scikit-learn = "~0.24.1"
scipy = "~1.5.2"
seaborn = "~0.11.1"
pydantic = "^2.6.3"
tqdm = "*"
prettytable = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

