[tool.poetry]
name = "conforme"
version = "0.1.0"
description = ""
authors = ["aloysiogl <aloysiogl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2"
jupyterlab = "^4.1"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
scipy = "^1.13"
seaborn = "^0.13"
pydantic = "^2.7"
matplotlib = "*"
tqdm = "*"
prettytable = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

